Cleaning up galleries.

--- a/_data/galleries.yaml
+++ b/_data/galleries.yaml
@@ -24,7 +24,7 @@
   - name: Collage No. 6
     materials: Paper collage
     filename: collage6
-    
+
 
 - name: Our Shared Past
   label: our-shared-past
@@ -131,41 +131,42 @@
 
 
 
-- name: Misc paintings
-  label: misc-paintings
-  datestart: 2009
-  dateend: 2011
-  description: >
-    A collection of paintings made between 2009 and 2011. 
-  work:
-    - name: Anton
-      dimensions: 12'' x 16''
-      materials: Oil and acrylic on canvas
-      filename: anton
-    - name: Coke bottle and a conch shell
-      dimensions: 11'' x 14''
-      materials: Oil on canvas
-      filename: coke
-    - name: Study for Francis Bacon Self Portrait
-      dimensions: 16'' x 20''
-      materials: Acrylic on canvas
-      filename: francis-bacon
-    - name: Sunday Sketch at FSCJ
-      dimensions: 5'' x 7''
-      materials: Acrylic on canvas
-      filename: sunday-sketch
-    - name: Urban Scrub
-      dimensions: 16'' x 20''
-      materials: Acrylic on canvas
-      filename: urban-scrub
-    - name: Empty Nesters
-      dimensions: 16'' x 20''
-      materials: Acrylic on canvas
-      filename: empty-nesters
-    - name: Redstart
-      dimensions: 8'' x 10''
-      materials: Acrylic on canvas
-      filename: redstart
+# - name: Misc paintings
+#   label: misc-paintings
+#   datestart: 2009
+#   dateend: 2011
+#   description: >
+#     A collection of paintings made between 2009 and 2011. 
+#   work:
+#     - name: Anton
+#       dimensions: 12'' x 16''
+#       materials: Oil and acrylic on canvas
+#       filename: anton
+#     - name: Coke bottle and a conch shell
+#       dimensions: 11'' x 14''
+#       materials: Oil on canvas
+#       filename: coke
+#     - name: Study for Francis Bacon Self Portrait
+#       dimensions: 16'' x 20''
+#       materials: Acrylic on canvas
+#       filename: francis-bacon
+#     - name: Sunday Sketch at FSCJ
+#       dimensions: 5'' x 7''
+#       materials: Acrylic on canvas
+#       filename: sunday-sketch
+#     - name: Urban Scrub
+#       dimensions: 16'' x 20''
+#       materials: Acrylic on canvas
+#       filename: urban-scrub
+#     - name: Empty Nesters
+#       dimensions: 16'' x 20''
+#       materials: Acrylic on canvas
+#       filename: empty-nesters
+#     - name: Redstart
+#       dimensions: 8'' x 10''
+#       materials: Acrylic on canvas
+#       filename: redstart
+
 
 
 
