--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,13 @@
 title: rachel levanger
 email: rachel.levanger@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Rachel lives in New York City, where she nurtures her passion for
+  Rachel spends her time in New York City and Philadelphia, where she nurtures her passion for
   mathematics, art, and rock climbing.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://rachellevanger.com" # the base hostname & protocol for your site
 twitter_username: RachelLevanger
-github_username:  rachellevanger
+github_username: rachellevanger
+linkedin_username: rachel-levanger-5a6b395
 
 # Build settings
 markdown: kramdown
