Updating landing page.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: rachel levanger
 email: rachel.levanger@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Rachel spends her time in New York City and Philadelphia, where she nurtures her passions for
-  mathematics, art, and rock climbing.
+  mathematics, art, cooking, birding, and rock climbing.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://rachellevanger.com" # the base hostname & protocol for your site
 twitter_username: RachelLevanger
