--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 title: rachel levanger
 email: rachel.levanger@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Rachel spends her time in New York City and Philadelphia, where she nurtures her passions for
-  mathematics, art, cooking, birding, and rock climbing.
+  Rachel spends her time in New York City, where she nurtures her passions for
+  mathematics, painting, cooking, birding, and rock climbing.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://rachellevanger.com" # the base hostname & protocol for your site
 twitter_username: RachelLevanger
